--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
   <header>
     <div>
-      <img  class="perfil" src="assets/perfil.jpg" alt="minha foto">
+        <div>
+              <img src="assets/perfil.jpg" alt="minha foto" class="perfil">
+              <!-- <img src="assets/Vector.svg" alt="" class="perfil2"> -->
+        </div>
       <section id="title">
         <h2>Hello World! Meu nome é <span>Rafael Almeida Barbosa Bomfim</span> e sou</h2>
         <h1>Desenvolvedor Fullstack</h1>
@@ -22,12 +25,47 @@
       </section> 
     
       <section class="logos">
-        <figure><img src="assets/GitHub.svg" alt="icone GITHUB"></figure>
-        <figure><img src="assets/HTML.svg" alt="icone HTML"></figure>
-        <figure><img src="assets/CSS.svg" alt="icone CSS"></figure>
-        <figure><img src="assets/JavaScript.svg" alt="icone JAVASCRIPT"></figure>
-        <figure><img src="assets/React.svg" alt="icone REACT"></figure>
-        <figure><img src="assets/Node.js.svg" alt="icone NODE.JS"></figure>
+        <figure class="lg">
+          <img src="assets/GitHub.svg" alt="icone GITHUB"> 
+          <figcaption>
+            <span>GitHub</span>
+          </figcaption>  
+        </figure>
+        
+        <figure class="lg htmll">
+          <img src="assets/HTML.svg" alt="icone html" class="cor-html" > 
+          <figcaption>
+            <span>HTML</span>
+          </figcaption>  
+        </figure>
+
+        <figure class="lg csss">
+          <img src="assets/CSS.svg" alt="icone css"> 
+          <figcaption>
+            <span>CSS</span>
+          </figcaption>  
+        </figure>
+
+        <figure class="lg javaa">
+          <img src="assets/JavaScript.svg" alt="icone JavaScript"> 
+          <figcaption>
+            <span>JavaScript</span>
+          </figcaption>  
+        </figure>
+
+        <figure class="lg reactt">
+          <img src="assets/React.svg" alt="icone React"> 
+          <figcaption>
+            <span>React</span>
+          </figcaption>  
+        </figure>
+
+        <figure class="lg jss">
+          <img src="assets/Node.js.svg" alt="icone node.jss"> 
+          <figcaption>
+            <span>Node.js</span>
+          </figcaption>  
+        </figure>
       </section>
     </div>
 
