adicionando menu ( MEUS SERVIÇOS )

--- a/index.html
+++ b/index.html
@@ -123,6 +123,41 @@
        </div>
      </header>
   </div> 
+
+  <div>
+    <header id="services">
+      <div class="my">
+        <h3 class="my-work">Meus serivços</h3>
+        <h2>Como posso ajudar o seu negócio</h2>
+      </div>
+
+      <div class="col auto grid gap-24">
+        <section class="my-services">
+          <img src="assets/services/pc.svg" alt="icone pc" class="social pdb-20">
+          <div class="grid gap-8">
+            <p class="srv pdl-20">Web sites e aplicativos</p>
+            <p class="srv2 pdl-20 pdb-20">Desenvolvimento de interfaces</p>
+          </div>
+        </section>
+
+        <section class="my-services">
+          <img src="assets/services/HardDrives.svg" alt="icone dados" class="social pdb-20">
+          <div class="grid gap-8">
+            <p class="srv pdl-20">API e banco de dados</p>
+            <p class="srv2 pdl-20 pdb-20">Criação de serviços do sistema</p>
+          </div>
+        </section>
+
+        <section class="my-services col">
+          <img src="assets/services/Infinity.svg" alt="icone inifinty" class="social pdb-20">
+          <div class="grid gap-8">
+            <p class="srv pdl-20">DevOps</p>
+            <p class="srv2 pdl-20 pdb-20">Gestão e infraestrutura da aplicação</p>
+          </div>
+        </section>
+      </div>
+    </header>
+  </div>
   
   <div>
     <header id="pai3">
