--- a/index.html
+++ b/index.html
@@ -33,35 +33,35 @@
         </figure>
         
         <figure class="lg htmll">
-          <img src="assets/HTML.svg" alt="icone html" class="cor-html" > 
+          <img src="assets/icones/html-color.svg" alt="icone html" class="cor-html" > 
           <figcaption>
             <span>HTML</span>
           </figcaption>  
         </figure>
 
         <figure class="lg csss">
-          <img src="assets/CSS.svg" alt="icone css"> 
+          <img src="assets/icones/css-color.svg" alt="icone css"> 
           <figcaption>
             <span>CSS</span>
           </figcaption>  
         </figure>
 
         <figure class="lg javaa">
-          <img src="assets/JavaScript.svg" alt="icone JavaScript"> 
+          <img src="assets/icones/javascript-color.svg" alt="icone JavaScript"> 
           <figcaption>
             <span>JavaScript</span>
           </figcaption>  
         </figure>
 
         <figure class="lg reactt">
-          <img src="assets/React.svg" alt="icone React"> 
+          <img src="assets/icones/react-color.svg" alt="icone React"> 
           <figcaption>
             <span>React</span>
           </figcaption>  
         </figure>
 
         <figure class="lg jss">
-          <img src="assets/Node.js.svg" alt="icone node.jss"> 
+          <img src="assets/icones/Node.js-color.svg" alt="icone node.jss"> 
           <figcaption>
             <span>Node.js</span>
           </figcaption>  
@@ -170,46 +170,49 @@
      <div>
        <section class="col">
           <div class="tt">
-            <figure class="cont">
+            <section class="cont">
               <div class="social">
-                <img src="assets/LinkedinLogo.svg" alt="icone Linkedin" >
+                <img src="assets/LinkedinLogo.svg" alt="icone Linkedin" class="" >
                 <span class="contact3">Linkedin</span>
-                <img src="assets/ArrowUpRight.svg" alt="icone seta" class="seta">
+                <a href="#"><img src="assets/ArrowUpRight.svg" alt="icone seta" class="seta"></a>
               </div>
-            </figure>
+            </section>
           </div>
-       </section>
+        </section>
 
        <section class="col">
           <div class="tt">
-            <figure class="cont">
+            <section class="cont">
               <div class="social">
                 <img src="assets/InstagramLogo.svg" alt="icone Instagram" >
                 <span class="contact3">Instagram</span>
+                <a href="#"><img src="assets/ArrowUpRight.svg" alt="icone seta" class="seta"></a>
               </div>
-            </figure>
+            </section>
           </div>
        </section>
 
        <section class="col">
           <div class="tt">
-            <figure class="cont">
+            <section class="cont">
               <div class="social">
                 <img src="assets/GithubLogo.svg" alt="icone GitHub" >
                 <span class="contact3">GitHub</span>
+                <a href="#"><img src="assets/ArrowUpRight.svg" alt="icone seta" class="seta"></a>
               </div>
-            </figure>
+            </section>
           </div>
        </section>
        
        <section class="col">
           <div class="tt">
-            <figure class="cont">
+            <section class="cont">
               <div class="social">
                 <img src="assets/LinkedinLogo.svg" alt="" >
                 <span class="contact3">E-mail</span>
+                <a href="#"><img src="assets/ArrowUpRight.svg" alt="icone seta" class="seta"></a>
               </div>
-            </figure>
+            </section>
           </div>
        </section>
      </div>
