resolvendo bug das logos

--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
         </figure>
 
         <figure class="lg csss">
-          <img src="assets/icones/css-color.svg" alt="icone css"> 
+          <img src="assets/icones/CSS-color.svg" alt="icone css"> 
           <figcaption>
             <span>CSS</span>
           </figcaption>  
         </figure>
 
         <figure class="lg javaa">
-          <img src="assets/icones/javascript-color.svg" alt="icone JavaScript"> 
+          <img src="assets/icones/javaScript-color.svg" alt="icone JavaScript"> 
           <figcaption>
             <span>JavaScript</span>
           </figcaption>  
         </figure>
 
         <figure class="lg reactt">
-          <img src="assets/icones/react-color.svg" alt="icone React"> 
+          <img src="assets/icones/React-color.svg" alt="icone React"> 
           <figcaption>
             <span>React</span>
           </figcaption>  
