reorganizando e resolvendo algums bugs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section> 
     
       <section class="logos">
-        <figure class="lg">
+        <figure class="lg git">
           <img src="assets/GitHub.svg" alt="icone GITHUB"> 
           <figcaption>
             <span>GitHub</span>
@@ -47,7 +47,7 @@
         </figure>
 
         <figure class="lg javaa">
-          <img src="assets/icones/javaScript-color.svg" alt="icone JavaScript"> 
+          <img src="assets/icones/JavaScript-color.svg" alt="icone JavaScript"> 
           <figcaption>
             <span>JavaScript</span>
           </figcaption>  
@@ -161,7 +161,7 @@
   
   <div>
     <header id="pai3">
-      <div class="grid gap-8 pd-48">
+      <div class="grid gap-8 pd-32">
         <h3 class="contact">Contato</h3> 
         <h2>Gostou do meu trabalho? </h2>
         <p class="contact2">Entre em contato ou acompanhe as minhas redes sociais!</p>
